@@ -5,6 +5,7 @@ import java.util.List;
 import javax.annotation.Nullable;
 
 import com.dudko.blazinghot.content.casting.casting_depot.CastingDepotBlockEntity;
+import com.dudko.blazinghot.content.casting.casting_depot.recipe.CastingRecipe;
 import com.dudko.blazinghot.registry.BlazingRecipeTypes;
 import com.simibubi.create.foundation.blockEntity.behaviour.filtering.FilteringBehaviour;
 import com.simibubi.create.foundation.fluid.FluidIngredient;
@@ -12,27 +13,26 @@ import com.simibubi.create.foundation.fluid.FluidIngredient;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Recipe;
+import net.minecraft.world.item.crafting.RecipeHolder;
+import net.minecraft.world.item.crafting.SingleRecipeInput;
 import net.minecraft.world.level.Level;
 import net.neoforged.neoforge.fluids.FluidStack;
-import net.neoforged.neoforge.items.ItemStackHandler;
-import net.neoforged.neoforge.items.wrapper.RecipeWrapper;
 
+// TODO: pull some of the methods up
 public class CastingBySpout {
 
-	private static final RecipeWrapper WRAPPER = new RecipeWrapper(new ItemStackHandler(1));
-
 	public static boolean canItemBeCast(Level world, ItemStack stack) {
-		WRAPPER.setItem(0, stack);
-		return BlazingRecipeTypes.CASTING.find(WRAPPER, world).isPresent();
+		SingleRecipeInput input = new SingleRecipeInput(stack);
+		return BlazingRecipeTypes.CASTING.find(input, world).isPresent();
 	}
 
 	public static int getRequiredAmountForItem(Level world, ItemStack stack, FluidStack availableFluid) {
-		WRAPPER.setItem(0, stack);
+		SingleRecipeInput input = new SingleRecipeInput(stack);
 
-		for (Recipe<RecipeWrapper> recipe : world
+		for (RecipeHolder<Recipe<SingleRecipeInput>> recipe : world
 				.getRecipeManager()
-				.getRecipesFor(BlazingRecipeTypes.CASTING.getType(), WRAPPER, world)) {
-			CastingRecipe castingRecipe = (CastingRecipe) recipe;
+				.getRecipesFor(BlazingRecipeTypes.CASTING.getType(), input, world)) {
+			CastingRecipe castingRecipe = (CastingRecipe) recipe.value();
 			FluidIngredient requiredFluid = castingRecipe.getRequiredFluid();
 			if (requiredFluid.test(availableFluid)) return requiredFluid.getRequiredAmount();
 		}
@@ -42,16 +42,16 @@ public class CastingBySpout {
 	@SuppressWarnings("DataFlowIssue")
 	@Nullable
 	public static CastingRecipe findRecipe(CastingDepotBlockEntity depot, Level world, int requiredAmount, ItemStack stack, FluidStack availableFluid) {
+		SingleRecipeInput input = new SingleRecipeInput(stack);
+
 		FluidStack toCast = availableFluid.copy();
 		toCast.setAmount(requiredAmount);
 
-		WRAPPER.setItem(0, stack);
-
 		CastingRecipe castingRecipe = null;
-		for (Recipe<RecipeWrapper> recipe : world
+		for (RecipeHolder<Recipe<SingleRecipeInput>> recipe : world
 				.getRecipeManager()
-				.getRecipesFor(BlazingRecipeTypes.CASTING.getType(), WRAPPER, world)) {
-			CastingRecipe cr = (CastingRecipe) recipe;
+				.getRecipesFor(BlazingRecipeTypes.CASTING.getType(), input, world)) {
+			CastingRecipe cr = (CastingRecipe) recipe.value();
 			FluidIngredient requiredFluid = cr.getRequiredFluid();
 			if (requiredFluid.test(toCast)) castingRecipe = cr;
 		}
@@ -62,16 +62,16 @@ public class CastingBySpout {
 
 	@Nullable
 	public static CastingRecipe findRecipe(CastingDepotBlockEntity depot, Level world, ResourceLocation id) {
-		Recipe<?> recipe = world.getRecipeManager().byKey(id).orElse(null);
-		if (!(recipe instanceof CastingRecipe castingRecipe)) return null;
+		RecipeHolder<?> holder = world.getRecipeManager().byKey(id).orElse(null);
+		if (holder == null) return null;
+		if (!(holder.value() instanceof CastingRecipe castingRecipe)) return null;
 		return matchFilter(depot, castingRecipe) ? castingRecipe : null;
-
 	}
 
 	public static ItemStack getCastingResult(@Nullable CastingRecipe recipe) {
 		if (recipe == null) return null;
 		List<ItemStack> results = recipe.rollResults();
-		return results.isEmpty() ? ItemStack.EMPTY : results.get(0);
+		return results.isEmpty() ? ItemStack.EMPTY : results.getFirst();
 	}
 
 	public static void finishCasting(boolean keepMold, ItemStack stack) {
